[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ready" type="Button" parent="."]
margin_left = 64.0
margin_top = 448.0
margin_right = 192.0
margin_bottom = 472.0
text = "Ready"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
margin_left = 64.0
margin_top = 496.0
margin_right = 192.0
margin_bottom = 516.0
disabled = true
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="Label" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyStatus" type="Label" parent="."]
margin_left = 64.0
margin_top = 408.0
margin_right = 192.0
margin_bottom = 439.0
text = "0/0 Ready
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Ready" to="." method="_on_Ready_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
